# Car-Insurance-Prediction-Data-Science-Project-MLOPS

./: .gitignore  README.md  app.py  pyproject.toml  setup.py  template.py
.github/workflows/: aws.yaml
config/: schema.yaml
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_transformation.py
src/constants/: __init__.py
src/entity/: config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
src/utils/: main_utils.py
static/css/: style.css
templates/: index.html
